Submit GatewayConfig.java for gateway-core module
Implement comprehensive gateway configuration with:
- Dynamic route configuration for public, private, admin, and realtime APIs
- Multi-tier rate limiting with IP, user, and client-based key resolvers
- Circuit breaker pattern implementation with configurable fallbacks
- Retry mechanism for fault tolerance
- CORS configuration for cross-origin resource sharing
- Spring Cloud Gateway integration with custom filter registration

Configuration features:
- Environment-based feature toggles for rate limiting, circuit breaker, and authentication
- Load balancing integration with service discovery
- Request/response filtering pipeline setup
- Path prefix stripping for clean routing
- Comprehensive error handling and resilience patterns
- Reactive programming support with Mono streams
- Custom bean registration for all gateway components